ingress-api-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
   rules:
    - host: api.dev.youthclubstage.de
      http:
        paths:
        - path: /pex
          backend:
            serviceName: pipeline-example-srv
            servicePort: 80
